<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ParentApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="login_button_label">Log in</string>
    <string name="sign_up_text">have not an account? sign up here</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">email</string>
    <string name="sign_up_button_label">sign up</string>
    <string name="signup_error_message">Please make sure you enter a username, password, and email address!</string>
    <string name="signup_error_title">Oops!</string>
    <string name="login_error_message">Please make sure you enter a username and password!</string>
    <string name="login_error_title">Oops!</string>
    <string name="menu_logout_label">Logout</string>
    <string name="empty_inbox_label">No new messages!</string>
    <string name="empty_friends_label">Add friends to begin!</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="error_title">We\'re sorry!</string>
    <string name="menu_camera_label">Camera</string>
    <string name="error_external_storage">There was a problem accessing your device\'s external storage.</string>
    <string name="general_error">Sorry, there was an error!</string>
    <string name="video_size_limit_warning">The selected video must be less than 10 MB.</string>
    <string name="error_selecting_file">There was an error with the file selected. Please select a different file.</string>
    <string name="error_file_too_large">The selected file is too large! Select a new file.</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>

    <string name="video_file_size_warning">The selected video must be less than 10 MB.</string>
    <string name="error_opening_file">There was a problem with the selected file.</string>
    <string name="error_file_size_too_large">The selected file is too large! Select a new file.</string>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipients_list_message">Choose some friends first!</string>
    <string name="menu_send_label">Send</string>
    <string name="error_selecting_file_title">We\'re sorry!</string>
    <string name="success_message">Message sent!</string>
    <string name="error_sending_message">There was an error sending your message. Please try again.</string>
    <string name="title_activity_view_image">ParentApp</string>
    <string name="content_desc_background">Ribbit Frog Background Image</string>
    <string name="subtitle">A Treehouse Project</string>
    <string name="cancel_button_label">cansel</string>
    <string name="content_desc_button_divider">Button divider</string>
    <string name="content_desc_message_icon">Message icon</string>
    <string name="content_desc_user_avatar">User avatar</string>
    <string name="content_desc_user_checkmark">User checkmark</string>
    <string name="push_message">You have a new message from %s!</string>
    <string name="title_activity_choose_reciver">Choose_reciver</string>
    <string name="title_activity_add_child">AddChildActivity</string>
    <string name="title_activity_parent_inbox">ParentInbox</string>
    <string name="text_of_colorfulVoice_detail">game name: \nColorfull sounds\n major goals: optimism, self-esteem, problem-solving,happiness \n secondary goals: to improve Auditory memory</string>
    <string name="title_activity_show_result">ShowResult</string>
    <string name="Happiness_Title">happiness</string>
    <string name="Optimism_title">optimism</string>
    <string name="ProblemSolving_Title">problem-solving</string>
    <string name="SelfRegard_title">self-esteem</string>
    <string name="Happiness_decleration">happiness is the ability for being satisfactory in personal and social life, and also sharing energetic emotions to others.</string>
    <string name="Optimism_decleration">Optimism is the ability to think and behave positive even in difficult situations.</string>
    <string name="ProblemSolving_decleration"> Problem solving is the ability to declare problems exactly and then find the possible and effective answers to solve them.</string>
    <string name="SelfRegard_decleration">Self-esteem refers to regard yourself and self acceptance.</string>
    <string name="kid_point_title">score</string>
    <string name="help_parent">hello \n Thanks for choosing Us!\n to use this application, at first must register your children \njust go to "register child" via parent application and then choose a username and password for your children \n then log in with associated data here as your child\n you can use both applications capabilities when connecting to Wi-Fi.\n to active a game on your child device should choose "send game request" from the menu\n the results of your child is available in "Result" section .</string>

</resources>
